--- a/index.html
+++ b/index.html
@@ -183,8 +183,9 @@
 </head>
 <body class="fill">
     <section class="heading heading-text">
-        <h1>New XCommander</h1>
-        <a class="heading-text" href="http://github.com/kaydensigh/xcommander">http://github.com/kaydensigh/xcommander</a>
+        <h1>
+            <a class="heading-text" href="http://github.com/aidanrb/xcommander">New XCommander</a>
+        </h1>
     </section>
     <div class="column">
         <div class="row">
