--- a/index.html
+++ b/index.html
@@ -4,18 +4,8 @@
     <title>New XCommander</title>
     <link rel="icon" type="image/png" sizes="128x128" href="/sprites/icon2.png">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5WHN599YW2"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-5WHN599YW2');
-    </script>
-
-    <script type="text/javascript" src="https://kaydensigh.github.io/uievents-code-keyboard-layout/keycode-layout.js"></script>
-    <script type="text/javascript" src="https://kaydensigh.github.io/uievents-code-keyboard-layout/keycode-lookup.js"></script>
+    <script type="text/javascript" src="/uievents-code-keyboard-layout/keycode-layout.js"></script>
+    <script type="text/javascript" src="/uievents-code-keyboard-layout/keycode-lookup.js"></script>
 
     <style>
         body {
