--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>New XCommander</title>
     <link rel="icon" type="image/png" sizes="128x128" href="/sprites/icon2.png">
 
-    <script type="text/javascript" src="/uievents-code-keyboard-layout/keycode-layout.js"></script>
-    <script type="text/javascript" src="/uievents-code-keyboard-layout/keycode-lookup.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/AidanRB/uievents-code-keyboard-layout/main/keycode-layout.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/AidanRB/uievents-code-keyboard-layout/main/keycode-lookup.js"></script>
 
     <style>
         body {
