--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
 </head>
 <body class="fill">
     <section class="heading heading-text">
-        <h1>
-            <a class="heading-text" href="http://github.com/aidanrb/xcommander">New XCommander</a>
+        <h1 class="heading-text">
+            <a href="http://github.com/aidanrb/xcommander">New XCommander</a> — fork from <a href="https://github.com/kaydensigh/xcommander">kaydensigh</a>
         </h1>
     </section>
     <div class="column">
