try to fix corb block

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html class="fill">
+
 <head>
     <title>New XCommander</title>
     <link rel="icon" type="image/png" sizes="128x128" href="/sprites/icon2.png">
 
-    <script type="text/javascript" src="https://raw.githubusercontent.com/AidanRB/uievents-code-keyboard-layout/main/keycode-layout.js"></script>
-    <script type="text/javascript" src="https://raw.githubusercontent.com/AidanRB/uievents-code-keyboard-layout/main/keycode-lookup.js"></script>
+    <script type="text/javascript"
+        src="https://aidanrb.github.io/uievents-code-keyboard-layout/main/keycode-layout.js"></script>
+    <script type="text/javascript"
+        src="https://aidanrb.github.io/uievents-code-keyboard-layout/main/keycode-lookup.js"></script>
 
     <style>
         body {
@@ -69,9 +72,9 @@
             padding: 5px 5px 5px 5px;
         }
 
-            li:hover {
-                background-color: grey;
-            }
+        li:hover {
+            background-color: grey;
+        }
 
         .map {
             display: none;
@@ -171,10 +174,12 @@
         }
     </style>
 </head>
+
 <body class="fill">
     <section class="heading heading-text">
         <h1 class="heading-text">
-            <a href="http://github.com/aidanrb/xcommander">New XCommander</a> — fork from <a href="https://github.com/kaydensigh/xcommander">kaydensigh</a>
+            <a href="http://github.com/aidanrb/xcommander">New XCommander</a> — fork from <a
+                href="https://github.com/kaydensigh/xcommander">kaydensigh</a>
         </h1>
     </section>
     <div class="column">
@@ -301,12 +306,15 @@
                     <button id="2Players">2 players</button>
                     <button id="3Players">3 players</button>
                     <button id="4Players">4 players</button>
-                    <button id="start"><h1>Start</h1></button>
+                    <button id="start">
+                        <h1>Start</h1>
+                    </button>
                 </div>
                 <div class="row">
                     <div class="column">
                         <span class="align-items-center">
-                            <img class="game-option" src="sprites/multishot.png" /><input type="checkbox" id="multishot" />
+                            <img class="game-option" src="sprites/multishot.png" /><input type="checkbox"
+                                id="multishot" />
                         </span>
                         <span class="align-items-center">
                             <img class="game-option" src="sprites/grenade.png" /><input type="checkbox" id="grenade" />
@@ -320,7 +328,8 @@
                     </div>
                     <div class="column">
                         <span class="align-items-center">
-                            <input type="checkbox" id="sideshot" /><img class="game-option" src="sprites/sideshot.png" />
+                            <input type="checkbox" id="sideshot" /><img class="game-option"
+                                src="sprites/sideshot.png" />
                         </span>
                         <span class="align-items-center">
                             <input type="checkbox" id="deflect" /><img class="game-option" src="sprites/deflect.png" />
@@ -341,4 +350,5 @@
     <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="js/xc.js"></script>
 </body>
+
 </html>
