add link selector for heading color

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             margin-bottom: 10px;
         }
 
-        .heading-text {
+        .heading-text,
+        .heading-text:any-link {
             background: #333;
             color: #fff;
         }
