--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
 
         .heading-text,
-        .heading-text:any-link {
+        .heading-text a:any-link {
             background: #333;
             color: #fff;
         }
